Обновление файлов с 1 на конце.

--- a/docs/mcp-servers__20260201200225.md
+++ b/docs/mcp-servers__20260201200225.md
@@ -1,3 +1,12 @@
+---
+id: 20260201200225
+title: MCP (MODEL CONTEXT PROTOCOL) СЕРВЕРЫ
+status: active
+source: roman
+ai_weight: normal
+created: 2026-02-01
+updated: 2026-02-05
+---
 # MCP (MODEL CONTEXT PROTOCOL) СЕРВЕРЫ
 
 Документация всех установленных MCP серверов в Cursor, Warp и Claude Desktop.
