--- a/docs/tools/n8n__20260201200225.md
+++ b/docs/tools/n8n__20260201200225.md
@@ -1,18 +1,21 @@
 ---
+id: 20260201200225
 title: n8n
+status: active
+source: roman
+ai_weight: normal
+created: 2026-02-01
+updated: 2026-02-01
 category: AI/автоматизации → workflow engine
 version: unknown
-status: active
 criticality: very_high
-updated: 2026-02-01
 ---
-
 # N8N
 
 > **Связанные документы:**
 > - [Основная инфраструктура](../../ВСЯ%20МОЯ%20ИНФРАСТРУКТУРА%20(для%20LLM).md)
-> - [Реестр нейросетей](./neural-networks.md) — модели для интеграции через Groq/OpenRouter
-> - [Claude Desktop](./claude-desktop.md) — MCP-n8n интеграция
+> - [Реестр нейросетей](./neural-networks__20260201232828.md) — модели для интеграции через Groq/OpenRouter
+> - [Claude Desktop](./claude-desktop__20260201200225.md) — MCP-n8n интеграция
 
 ## ОСНОВНАЯ ИНФОРМАЦИЯ
 
