--- a/docs/tools/neural-networks__20260201232828.md
+++ b/docs/tools/neural-networks__20260201232828.md
@@ -1,22 +1,25 @@
 ---
+id: 20260201232828
 title: Реестр нейросетей
-category: AI → Models Registry
 status: active
-criticality: high
+source: roman
+ai_weight: normal
+created: 2026-02-01
 updated: 2026-02-01
+category: AI → Models Registry
+criticality: high
 ---
-
 # РЕЕСТР НЕЙРОСЕТЕЙ
 
 > **Конфигурация Continue:** `~/.continue/config.yaml`  
 > **Связанные документы:**
 > - [Основная инфраструктура](../../ВСЯ%20МОЯ%20ИНФРАСТРУКТУРА%20(для%20LLM).md) — общий реестр инструментов
-> - [n8n](./n8n.md) — интеграции с LLM через workflows
-> - [Cursor](./cursor.md) — настройки Continue и MCP серверов
-> - [Claude Desktop](./claude-desktop.md) — MCP серверы для Claude
-> - [PaddleOCR](./paddleocr.md) — OCR для русского языка
-> - [Tesseract OCR](./tesseract-ocr.md) — базовый OCR
-> - [Warp](./warp.md) — терминал с AI-агентами
+> - [n8n](./n8n__20260201200225.md) — интеграции с LLM через workflows
+> - [Cursor](./cursor__20260201200225.md) — настройки Continue и MCP серверов
+> - [Claude Desktop](./claude-desktop__20260201200225.md) — MCP серверы для Claude
+> - [PaddleOCR](./paddleocr__20260201200225.md) — OCR для русского языка
+> - [Tesseract OCR](./tesseract-ocr__20260201200225.md) — базовый OCR
+> - [Warp](./warp__20260201200225.md) — терминал с AI-агентами
 
 ---
 
@@ -185,7 +188,7 @@ updated: 2026-02-01
 
 ### 3.1 OCR (OPTICAL CHARACTER RECOGNITION)
 
-> См. также: [PaddleOCR](./paddleocr.md), [Tesseract OCR](./tesseract-ocr.md)
+> См. также: [PaddleOCR](./paddleocr__20260201200225.md), [Tesseract OCR](./tesseract-ocr__20260201200225.md)
 
 | Модель/Сервис | Русский | Скорость | Тип | Интеграция | Статус |
 |---------------|:-------:|:--------:|-----|------------|--------|
@@ -255,7 +258,7 @@ updated: 2026-02-01
 
 ### С CONTINUE (IDE)
 
-> См. также: [Cursor](./cursor.md), `~/.continue/config.yaml`
+> См. также: [Cursor](./cursor__20260201200225.md), `~/.continue/config.yaml`
 
 | Роль | Модель (выбор в селекторе) | Провайдер |
 |------|---------------------------|-----------|
@@ -270,7 +273,7 @@ updated: 2026-02-01
 
 ### С N8N
 
-> См. также: [n8n](./n8n.md)
+> См. также: [n8n](./n8n__20260201200225.md)
 
 | Сервис | Назначение | Credentials |
 |--------|------------|-------------|
