--- a/docs/tools/tesseract-ocr__20260201200225.md
+++ b/docs/tools/tesseract-ocr__20260201200225.md
@@ -1,17 +1,20 @@
 ---
+id: 20260201200225
 title: Tesseract OCR
+status: active
+source: roman
+ai_weight: normal
+created: 2026-02-01
+updated: 2026-02-01
 category: AI → OCR / image processing
 version: unknown
-status: active
 criticality: medium
-updated: 2026-02-01
 ---
-
 # TESSERACT OCR
 
 > **Связанные документы:**
-> - [Реестр нейросетей](./neural-networks.md) — рекомендуемые модели для улучшения OCR
-> - [PaddleOCR](./paddleocr.md) — альтернативный OCR (лучше для русского)
+> - [Реестр нейросетей](./neural-networks__20260201232828.md) — рекомендуемые модели для улучшения OCR
+> - [PaddleOCR](./paddleocr__20260201200225.md) — альтернативный OCR (лучше для русского)
 > - [Основная инфраструктура](../../ВСЯ%20МОЯ%20ИНФРАСТРУКТУРА%20(для%20LLM).md)
 
 ## ОСНОВНАЯ ИНФОРМАЦИЯ
