--- a/ВСЯ МОЯ ИНФРАСТРУКТУРА (для LLM)__20260201200225.md
+++ b/ВСЯ МОЯ ИНФРАСТРУКТУРА (для LLM)__20260201200225.md
@@ -1,10 +1,13 @@
 ---
+id: 20260201200225
 title: ToolingRegistry_v1.2
 status: active
+source: roman
+ai_weight: normal
+created: 2026-02-01
 updated: 2026-02-01
 owner: Roman Galankin
 ---
-
 # TOOLING REGISTRY — ЕДИНАЯ КАРТА ИНСТРУМЕНТАЛЯ
 
 Цель: держать в одном месте **инфраструктуру, софт, SaaS, AI, автоматизации и знания** так, чтобы было видно:
@@ -193,7 +196,7 @@ owner: Roman Galankin
 11. **YAML** (Red Hat, 1.19.1-universal)
     - Поддержка YAML
 
-**Детальная документация:** см. `docs/tools/cursor.md`
+**Детальная документация:** см. `docs/tools/cursor__20260201200225.md`
 
 ### MCP (MODEL CONTEXT PROTOCOL) СЕРВЕРЫ
 
@@ -243,7 +246,7 @@ owner: Roman Galankin
 
 **Конфигурация:** `~/.cursor/mcp.json`
 
-**Детальная документация:** см. `docs/tools/cursor.md`
+**Детальная документация:** см. `docs/tools/cursor__20260201200225.md`
 
 ## 2.3 ТЕРМИНАЛ / CLI
 
@@ -267,9 +270,9 @@ owner: Roman Galankin
 **Интеграция с проектами:**
 - Используется как операторская панель в проектах `vps/`, `n8n/`, `n8n_workflow/`, `Beget2/`
 - Файлы правил: `WARP.md` в каждом проекте
-- Приоритет источников: Warp-слой → документация репозитория → vars.md
+- Приоритет источников: Warp-слой → документация репозитория → vars__20260204221352.md
 
-**Детальная документация:** см. `docs/tools/warp.md`
+**Детальная документация:** см. `docs/tools/warp__20260201200225.md`
 
 ## 2.4 MOBILE
 
@@ -342,7 +345,7 @@ owner: Roman Galankin
 
 # 4) AI И АВТОМАТИЗАЦИИ
 
-> **Полный реестр нейросетей:** см. [`docs/tools/neural-networks.md`](docs/tools/neural-networks.md)
+> **Полный реестр нейросетей:** см. [`docs/tools/neural-networks__20260201232828.md`](docs/tools/neural-networks__20260201232828.md)
 > - Все доступные модели Ollama (локальные и cloud)
 > - Бесплатные модели OpenRouter
 > - Оценки для русского языка, скорости, OCR
@@ -399,7 +402,7 @@ owner: Roman Galankin
 
 #### УСТАНОВЛЕННЫЕ МОДЕЛИ В OLLAMA
 
-> Полный список всех доступных моделей (включая не установленные): [`docs/tools/neural-networks.md`](docs/tools/neural-networks.md)
+> Полный список всех доступных моделей (включая не установленные): [`docs/tools/neural-networks__20260201232828.md`](docs/tools/neural-networks__20260201232828.md)
 
 **1. qwen3:30b** (Q4_K_M, 30.5B параметров, ~18 GB)
 - Роль: максимальное качество для сложных задач
@@ -468,7 +471,7 @@ owner: Roman Galankin
 - Groq, OpenRouter (LLM API)
 - blink.new (webhook, в работе)
 
-**Детальная документация:** см. `docs/tools/n8n.md`
+**Детальная документация:** см. `docs/tools/n8n__20260201200225.md`
 
 ### MCP-N8N
 - Категория: AI/автоматизации → MCP
@@ -495,7 +498,7 @@ owner: Roman Galankin
 - mcp-n8n работает в Claude Desktop (в отличие от Cursor, где была ошибка)
 - Подключение к n8n через SSH → Docker контейнер на VPS Beget
 
-**Детальная документация:** см. `docs/tools/claude-desktop.md`
+**Детальная документация:** см. `docs/tools/claude-desktop__20260201200225.md`
 
 ## 4.4 AI-ПЛАТФОРМЫ НА СЕРВЕРЕ
 
@@ -612,10 +615,10 @@ owner: Roman Galankin
 ## 8.1 МИНИМАЛЬНЫЕ ПРАВИЛА ОБНОВЛЕНИЯ
 - Любой новый инструмент → запись сюда (назначение, статус, критичность, проблемы)
 - Любая интеграция → стрелка `A → B` + где секрет + как дебажить
-- Любое изменение инфраструктуры → запись в `docs/changes.md` (проектное правило уже есть)
+- Любое изменение инфраструктуры → запись в `docs/changes__20260205181441.md` (проектное правило уже есть)
 
 ## 8.2 ВЕРСИИ
-- v1.2 — текущая (добавлен реестр нейросетей `docs/tools/neural-networks.md`)
+- v1.2 — текущая (добавлен реестр нейросетей `docs/tools/neural-networks__20260201232828.md`)
 - v1.1 — после добавления macOS/Cursor/Continue/Ollama/GitHub и структуры IDE-слоя
 - v1.3 — после закрытия пробелов по Shortcuts и blink.new (как минимум)
 
@@ -630,7 +633,7 @@ owner: Roman Galankin
 
 # 10) ИСТОРИЯ ОБНОВЛЕНИЙ
 
-- **2026-02-01:** Создан отдельный реестр нейросетей `docs/tools/neural-networks.md`
+- **2026-02-01:** Создан отдельный реестр нейросетей `docs/tools/neural-networks__20260201232828.md`
   - Добавлены все доступные модели Ollama (локальные и cloud)
   - Добавлены бесплатные модели OpenRouter (15+ моделей)
   - Добавлены оценки для русского языка, скорости, OCR
