--- a/docs/tools/cursor__20260201200225.md
+++ b/docs/tools/cursor__20260201200225.md
@@ -1,18 +1,21 @@
 ---
+id: 20260201200225
 title: Cursor
+status: active
+source: roman
+ai_weight: normal
+created: 2026-02-01
+updated: 2026-02-01
 category: Программы → Desktop → IDE
 version: unknown
-status: active
 criticality: high
-updated: 2026-02-01
 ---
-
 # CURSOR
 
 > **Связанные документы:**
 > - [Основная инфраструктура](../../ВСЯ%20МОЯ%20ИНФРАСТРУКТУРА%20(для%20LLM).md)
-> - [Реестр нейросетей](./neural-networks.md) — все доступные модели и рекомендации
-> - [Warp](./warp.md) — терминал с AI-агентами
+> - [Реестр нейросетей](./neural-networks__20260201232828.md) — все доступные модели и рекомендации
+> - [Warp](./warp__20260201200225.md) — терминал с AI-агентами
 
 ## ОСНОВНАЯ ИНФОРМАЦИЯ
 
