--- a/docs/tools/paddleocr__20260201200225.md
+++ b/docs/tools/paddleocr__20260201200225.md
@@ -1,17 +1,20 @@
 ---
+id: 20260201200225
 title: PaddleOCR
+status: active
+source: roman
+ai_weight: normal
+created: 2026-02-01
+updated: 2026-02-01
 category: AI → OCR / image processing
 version: latest (Docker)
-status: active
 criticality: medium
-updated: 2026-02-01
 ---
-
 # PADDLEOCR
 
 > **Связанные документы:**
-> - [Реестр нейросетей](./neural-networks.md) — рекомендуемые модели для улучшения OCR
-> - [Tesseract OCR](./tesseract-ocr.md) — альтернативный OCR
+> - [Реестр нейросетей](./neural-networks__20260201232828.md) — рекомендуемые модели для улучшения OCR
+> - [Tesseract OCR](./tesseract-ocr__20260201200225.md) — альтернативный OCR
 > - [Основная инфраструктура](../../ВСЯ%20МОЯ%20ИНФРАСТРУКТУРА%20(для%20LLM).md)
 
 ## ОСНОВНАЯ ИНФОРМАЦИЯ
